updated CSS float examples

--- a/11 Floats/CSS/style.css
+++ b/11 Floats/CSS/style.css
@@ -57,5 +57,13 @@ see: https://developer.mozilla.org/en-US/docs/Web/CSS/display
 */
 
 .clear {
+  clear: both;
+}
 
+.container {
+  background-color: yellow;
+  border: 1px solid black;
+  padding: 1rem;
+  /* this ensures the floated element is contained within the container: */ 
+  display: flow-root;
 }
