added CSS Flexbox examples and links

--- a/13 Position/css/style.css
+++ b/13 Position/css/style.css
@@ -93,7 +93,7 @@ body {
   top: 0;
 }
 
-/*///////////////////////////*/
+/*/////////////////////////// Second example for CSS with a fixed social media button and sticky block-level headings */
 /* for better scroll behavior */
 html {scroll-behavior: smooth;}
 
